PortParser.automaton
State 0:
seq' -> . seq [ # ]
-- On WHILE shift to state 1
-- On SET shift to state 24
-- On PRINT shift to state 45
-- On IF shift to state 47
-- On FOR shift to state 51
-- On DO shift to state 57
-- On stmts shift to state 81
-- On stmt shift to state 66
-- On seq shift to state 83

State 1:
stmt -> WHILE . expr DO LP stmts RP DONE [ SEMICOLON RP EOF ]
-- On IDENT shift to state 2
-- On CST shift to state 6
-- On expr shift to state 7

State 2:
expr -> IDENT . [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> IDENT . LRP CST RRP [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On LRP shift to state 3
-- On TIMES reduce production expr -> IDENT 
-- On THEN reduce production expr -> IDENT 
-- On SEMICOLON reduce production expr -> IDENT 
-- On RP reduce production expr -> IDENT 
-- On PLUS reduce production expr -> IDENT 
-- On OR reduce production expr -> IDENT 
-- On MINUS reduce production expr -> IDENT 
-- On LESS reduce production expr -> IDENT 
-- On LEQ reduce production expr -> IDENT 
-- On EOF reduce production expr -> IDENT 
-- On DONE reduce production expr -> IDENT 
-- On DO reduce production expr -> IDENT 
-- On DIV reduce production expr -> IDENT 
-- On BIG reduce production expr -> IDENT 
-- On BEQ reduce production expr -> IDENT 
-- On AND reduce production expr -> IDENT 

State 3:
expr -> IDENT LRP . CST RRP [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On CST shift to state 4

State 4:
expr -> IDENT LRP CST . RRP [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On RRP shift to state 5

State 5:
expr -> IDENT LRP CST RRP . [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On TIMES reduce production expr -> IDENT LRP CST RRP 
-- On THEN reduce production expr -> IDENT LRP CST RRP 
-- On SEMICOLON reduce production expr -> IDENT LRP CST RRP 
-- On RP reduce production expr -> IDENT LRP CST RRP 
-- On PLUS reduce production expr -> IDENT LRP CST RRP 
-- On OR reduce production expr -> IDENT LRP CST RRP 
-- On MINUS reduce production expr -> IDENT LRP CST RRP 
-- On LESS reduce production expr -> IDENT LRP CST RRP 
-- On LEQ reduce production expr -> IDENT LRP CST RRP 
-- On EOF reduce production expr -> IDENT LRP CST RRP 
-- On DONE reduce production expr -> IDENT LRP CST RRP 
-- On DO reduce production expr -> IDENT LRP CST RRP 
-- On DIV reduce production expr -> IDENT LRP CST RRP 
-- On BIG reduce production expr -> IDENT LRP CST RRP 
-- On BEQ reduce production expr -> IDENT LRP CST RRP 
-- On AND reduce production expr -> IDENT LRP CST RRP 

State 6:
expr -> CST . [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On TIMES reduce production expr -> CST 
-- On THEN reduce production expr -> CST 
-- On SEMICOLON reduce production expr -> CST 
-- On RP reduce production expr -> CST 
-- On PLUS reduce production expr -> CST 
-- On OR reduce production expr -> CST 
-- On MINUS reduce production expr -> CST 
-- On LESS reduce production expr -> CST 
-- On LEQ reduce production expr -> CST 
-- On EOF reduce production expr -> CST 
-- On DONE reduce production expr -> CST 
-- On DO reduce production expr -> CST 
-- On DIV reduce production expr -> CST 
-- On BIG reduce production expr -> CST 
-- On BEQ reduce production expr -> CST 
-- On AND reduce production expr -> CST 

State 7:
expr -> expr . AND expr [ TIMES PLUS OR MINUS LESS LEQ DO DIV BIG BEQ AND ]
expr -> expr . OR expr [ TIMES PLUS OR MINUS LESS LEQ DO DIV BIG BEQ AND ]
expr -> expr . BEQ expr [ TIMES PLUS OR MINUS LESS LEQ DO DIV BIG BEQ AND ]
expr -> expr . BIG expr [ TIMES PLUS OR MINUS LESS LEQ DO DIV BIG BEQ AND ]
expr -> expr . LESS expr [ TIMES PLUS OR MINUS LESS LEQ DO DIV BIG BEQ AND ]
expr -> expr . LEQ expr [ TIMES PLUS OR MINUS LESS LEQ DO DIV BIG BEQ AND ]
expr -> expr . PLUS expr [ TIMES PLUS OR MINUS LESS LEQ DO DIV BIG BEQ AND ]
expr -> expr . MINUS expr [ TIMES PLUS OR MINUS LESS LEQ DO DIV BIG BEQ AND ]
expr -> expr . DIV expr [ TIMES PLUS OR MINUS LESS LEQ DO DIV BIG BEQ AND ]
expr -> expr . TIMES expr [ TIMES PLUS OR MINUS LESS LEQ DO DIV BIG BEQ AND ]
stmt -> WHILE expr . DO LP stmts RP DONE [ SEMICOLON RP EOF ]
-- On TIMES shift to state 8
-- On PLUS shift to state 10
-- On OR shift to state 14
-- On MINUS shift to state 16
-- On LESS shift to state 18
-- On LEQ shift to state 20
-- On DO shift to state 22
-- On DIV shift to state 12
-- On BIG shift to state 39
-- On BEQ shift to state 41
-- On AND shift to state 43

State 8:
expr -> expr TIMES . expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On IDENT shift to state 2
-- On CST shift to state 6
-- On expr shift to state 9

State 9:
expr -> expr . AND expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . OR expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . BEQ expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . BIG expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . LESS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . LEQ expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr TIMES expr . [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On TIMES reduce production expr -> expr TIMES expr 
-- On THEN reduce production expr -> expr TIMES expr 
-- On SEMICOLON reduce production expr -> expr TIMES expr 
-- On RP reduce production expr -> expr TIMES expr 
-- On PLUS reduce production expr -> expr TIMES expr 
-- On OR reduce production expr -> expr TIMES expr 
-- On MINUS reduce production expr -> expr TIMES expr 
-- On LESS reduce production expr -> expr TIMES expr 
-- On LEQ reduce production expr -> expr TIMES expr 
-- On EOF reduce production expr -> expr TIMES expr 
-- On DONE reduce production expr -> expr TIMES expr 
-- On DO reduce production expr -> expr TIMES expr 
-- On DIV reduce production expr -> expr TIMES expr 
-- On BIG reduce production expr -> expr TIMES expr 
-- On BEQ reduce production expr -> expr TIMES expr 
-- On AND reduce production expr -> expr TIMES expr 

State 10:
expr -> expr PLUS . expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On IDENT shift to state 2
-- On CST shift to state 6
-- On expr shift to state 11

State 11:
expr -> expr . AND expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . OR expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . BEQ expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . BIG expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . LESS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . LEQ expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr PLUS expr . [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On TIMES shift to state 8
-- On DIV shift to state 12
-- On THEN reduce production expr -> expr PLUS expr 
-- On SEMICOLON reduce production expr -> expr PLUS expr 
-- On RP reduce production expr -> expr PLUS expr 
-- On PLUS reduce production expr -> expr PLUS expr 
-- On OR reduce production expr -> expr PLUS expr 
-- On MINUS reduce production expr -> expr PLUS expr 
-- On LESS reduce production expr -> expr PLUS expr 
-- On LEQ reduce production expr -> expr PLUS expr 
-- On EOF reduce production expr -> expr PLUS expr 
-- On DONE reduce production expr -> expr PLUS expr 
-- On DO reduce production expr -> expr PLUS expr 
-- On BIG reduce production expr -> expr PLUS expr 
-- On BEQ reduce production expr -> expr PLUS expr 
-- On AND reduce production expr -> expr PLUS expr 

State 12:
expr -> expr DIV . expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On IDENT shift to state 2
-- On CST shift to state 6
-- On expr shift to state 13

State 13:
expr -> expr . AND expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . OR expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . BEQ expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . BIG expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . LESS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . LEQ expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr DIV expr . [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On TIMES reduce production expr -> expr DIV expr 
-- On THEN reduce production expr -> expr DIV expr 
-- On SEMICOLON reduce production expr -> expr DIV expr 
-- On RP reduce production expr -> expr DIV expr 
-- On PLUS reduce production expr -> expr DIV expr 
-- On OR reduce production expr -> expr DIV expr 
-- On MINUS reduce production expr -> expr DIV expr 
-- On LESS reduce production expr -> expr DIV expr 
-- On LEQ reduce production expr -> expr DIV expr 
-- On EOF reduce production expr -> expr DIV expr 
-- On DONE reduce production expr -> expr DIV expr 
-- On DO reduce production expr -> expr DIV expr 
-- On DIV reduce production expr -> expr DIV expr 
-- On BIG reduce production expr -> expr DIV expr 
-- On BEQ reduce production expr -> expr DIV expr 
-- On AND reduce production expr -> expr DIV expr 

State 14:
expr -> expr OR . expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On IDENT shift to state 2
-- On CST shift to state 6
-- On expr shift to state 15

State 15:
expr -> expr . AND expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . OR expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr OR expr . [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . BEQ expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . BIG expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . LESS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . LEQ expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On TIMES shift to state 8
-- On PLUS shift to state 10
-- On MINUS shift to state 16
-- On DIV shift to state 12
-- On THEN reduce production expr -> expr OR expr 
-- On SEMICOLON reduce production expr -> expr OR expr 
-- On RP reduce production expr -> expr OR expr 
-- On OR reduce production expr -> expr OR expr 
-- On LESS reduce production expr -> expr OR expr 
-- On LEQ reduce production expr -> expr OR expr 
-- On EOF reduce production expr -> expr OR expr 
-- On DONE reduce production expr -> expr OR expr 
-- On DO reduce production expr -> expr OR expr 
-- On BIG reduce production expr -> expr OR expr 
-- On BEQ reduce production expr -> expr OR expr 
-- On AND reduce production expr -> expr OR expr 

State 16:
expr -> expr MINUS . expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On IDENT shift to state 2
-- On CST shift to state 6
-- On expr shift to state 17

State 17:
expr -> expr . AND expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . OR expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . BEQ expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . BIG expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . LESS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . LEQ expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr MINUS expr . [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On TIMES shift to state 8
-- On DIV shift to state 12
-- On THEN reduce production expr -> expr MINUS expr 
-- On SEMICOLON reduce production expr -> expr MINUS expr 
-- On RP reduce production expr -> expr MINUS expr 
-- On PLUS reduce production expr -> expr MINUS expr 
-- On OR reduce production expr -> expr MINUS expr 
-- On MINUS reduce production expr -> expr MINUS expr 
-- On LESS reduce production expr -> expr MINUS expr 
-- On LEQ reduce production expr -> expr MINUS expr 
-- On EOF reduce production expr -> expr MINUS expr 
-- On DONE reduce production expr -> expr MINUS expr 
-- On DO reduce production expr -> expr MINUS expr 
-- On BIG reduce production expr -> expr MINUS expr 
-- On BEQ reduce production expr -> expr MINUS expr 
-- On AND reduce production expr -> expr MINUS expr 

State 18:
expr -> expr LESS . expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On IDENT shift to state 2
-- On CST shift to state 6
-- On expr shift to state 19

State 19:
expr -> expr . AND expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . OR expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . BEQ expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . BIG expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . LESS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr LESS expr . [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . LEQ expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On TIMES shift to state 8
-- On PLUS shift to state 10
-- On MINUS shift to state 16
-- On DIV shift to state 12
-- On THEN reduce production expr -> expr LESS expr 
-- On SEMICOLON reduce production expr -> expr LESS expr 
-- On RP reduce production expr -> expr LESS expr 
-- On OR reduce production expr -> expr LESS expr 
-- On LESS reduce production expr -> expr LESS expr 
-- On LEQ reduce production expr -> expr LESS expr 
-- On EOF reduce production expr -> expr LESS expr 
-- On DONE reduce production expr -> expr LESS expr 
-- On DO reduce production expr -> expr LESS expr 
-- On BIG reduce production expr -> expr LESS expr 
-- On BEQ reduce production expr -> expr LESS expr 
-- On AND reduce production expr -> expr LESS expr 

State 20:
expr -> expr LEQ . expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On IDENT shift to state 2
-- On CST shift to state 6
-- On expr shift to state 21

State 21:
expr -> expr . AND expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . OR expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . BEQ expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . BIG expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . LESS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . LEQ expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr LEQ expr . [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . PLUS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . MINUS expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . DIV expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
expr -> expr . TIMES expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On TIMES shift to state 8
-- On PLUS shift to state 10
-- On MINUS shift to state 16
-- On DIV shift to state 12
-- On THEN reduce production expr -> expr LEQ expr 
-- On SEMICOLON reduce production expr -> expr LEQ expr 
-- On RP reduce production expr -> expr LEQ expr 
-- On OR reduce production expr -> expr LEQ expr 
-- On LESS reduce production expr -> expr LEQ expr 
-- On LEQ reduce production expr -> expr LEQ expr 
-- On EOF reduce production expr -> expr LEQ expr 
-- On DONE reduce production expr -> expr LEQ expr 
-- On DO reduce production expr -> expr LEQ expr 
-- On BIG reduce production expr -> expr LEQ expr 
-- On BEQ reduce production expr -> expr LEQ expr 
-- On AND reduce production expr -> expr LEQ expr 

State 22:
stmt -> WHILE expr DO . LP stmts RP DONE [ SEMICOLON RP EOF ]
-- On LP shift to state 23

State 23:
stmt -> WHILE expr DO LP . stmts RP DONE [ SEMICOLON RP EOF ]
-- On WHILE shift to state 1
-- On SET shift to state 24
-- On PRINT shift to state 45
-- On IF shift to state 47
-- On FOR shift to state 51
-- On DO shift to state 57
-- On stmts shift to state 78
-- On stmt shift to state 66

State 24:
stmt -> SET . IDENT EQ expr [ SEMICOLON RP EOF ]
stmt -> SET . IDENT LRP CST RRP EQ LB cst RB [ SEMICOLON RP EOF ]
-- On IDENT shift to state 25

State 25:
stmt -> SET IDENT . EQ expr [ SEMICOLON RP EOF ]
stmt -> SET IDENT . LRP CST RRP EQ LB cst RB [ SEMICOLON RP EOF ]
-- On LRP shift to state 26
-- On EQ shift to state 37

State 26:
stmt -> SET IDENT LRP . CST RRP EQ LB cst RB [ SEMICOLON RP EOF ]
-- On CST shift to state 27

State 27:
stmt -> SET IDENT LRP CST . RRP EQ LB cst RB [ SEMICOLON RP EOF ]
-- On RRP shift to state 28

State 28:
stmt -> SET IDENT LRP CST RRP . EQ LB cst RB [ SEMICOLON RP EOF ]
-- On EQ shift to state 29

State 29:
stmt -> SET IDENT LRP CST RRP EQ . LB cst RB [ SEMICOLON RP EOF ]
-- On LB shift to state 30

State 30:
stmt -> SET IDENT LRP CST RRP EQ LB . cst RB [ SEMICOLON RP EOF ]
-- On CST shift to state 31
-- On csts shift to state 32
-- On cst shift to state 35

State 31:
csts -> CST . [ RB COLON ]
-- On RB reduce production csts -> CST 
-- On COLON reduce production csts -> CST 

State 32:
cst -> csts . [ RB ]
csts -> csts . COLON CST [ RB COLON ]
-- On COLON shift to state 33
-- On RB reduce production cst -> csts 

State 33:
csts -> csts COLON . CST [ RB COLON ]
-- On CST shift to state 34

State 34:
csts -> csts COLON CST . [ RB COLON ]
-- On RB reduce production csts -> csts COLON CST 
-- On COLON reduce production csts -> csts COLON CST 

State 35:
stmt -> SET IDENT LRP CST RRP EQ LB cst . RB [ SEMICOLON RP EOF ]
-- On RB shift to state 36

State 36:
stmt -> SET IDENT LRP CST RRP EQ LB cst RB . [ SEMICOLON RP EOF ]
-- On SEMICOLON reduce production stmt -> SET IDENT LRP CST RRP EQ LB cst RB 
-- On RP reduce production stmt -> SET IDENT LRP CST RRP EQ LB cst RB 
-- On EOF reduce production stmt -> SET IDENT LRP CST RRP EQ LB cst RB 

State 37:
stmt -> SET IDENT EQ . expr [ SEMICOLON RP EOF ]
-- On IDENT shift to state 2
-- On CST shift to state 6
-- On expr shift to state 38

State 38:
expr -> expr . AND expr [ TIMES SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DIV BIG BEQ AND ]
expr -> expr . OR expr [ TIMES SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DIV BIG BEQ AND ]
expr -> expr . BEQ expr [ TIMES SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DIV BIG BEQ AND ]
expr -> expr . BIG expr [ TIMES SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DIV BIG BEQ AND ]
expr -> expr . LESS expr [ TIMES SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DIV BIG BEQ AND ]
expr -> expr . LEQ expr [ TIMES SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DIV BIG BEQ AND ]
expr -> expr . PLUS expr [ TIMES SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DIV BIG BEQ AND ]
expr -> expr . MINUS expr [ TIMES SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DIV BIG BEQ AND ]
expr -> expr . DIV expr [ TIMES SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DIV BIG BEQ AND ]
expr -> expr . TIMES expr [ TIMES SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DIV BIG BEQ AND ]
stmt -> SET IDENT EQ expr . [ SEMICOLON RP EOF ]
-- On TIMES shift to state 8
-- On PLUS shift to state 10
-- On OR shift to state 14
-- On MINUS shift to state 16
-- On LESS shift to state 18
-- On LEQ shift to state 20
-- On DIV shift to state 12
-- On BIG shift to state 39
-- On BEQ shift to state 41
-- On AND shift to state 43
-- On SEMICOLON reduce production stmt -> SET IDENT EQ expr 
-- On RP reduce production stmt -> SET IDENT EQ expr 
-- On EOF reduce production stmt -> SET IDENT EQ expr 

State 39:
expr -> expr BIG . expr [ TIMES THEN SEMICOLON RP PLUS OR MINUS LESS LEQ EOF DONE DO DIV BIG BEQ AND ]
-- On IDENT shift to state 2
-- On CST shift to state 6
-- On expr shift to state 40
